syntax = "proto3";

package products;

import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";

// Required to generate go
option go_package = "github.com/qwertydi/playground/pb/v1";
option java_package = "com.dmsc.service.model.product";
option java_multiple_files = true;
option java_outer_classname = "ProductProto";

message Product {
  string name = 1 [(buf.validate.field).cel = {
    id: "name",
    message: "name length must be at least 5 characters",
    expression: "this.size() >= 5",
  }];
  int64 price = 2 [(buf.validate.field).int64 = {gte: 0}];
  string description = 3 [(buf.validate.field).string = {min_len: 5}];
  string category = 4 [(buf.validate.field).string = {min_len: 1}];
  int32 availability = 5  [(buf.validate.field).int32 = {gte: 0}];
}

message ProductResponse {
  string id = 1;
  string name = 2;
  int64 price = 3;
  string description = 4;
  string category = 5;
  int32 availability = 6;
}

message ListProducts {
    repeated ProductResponse products = 1;
}

message ItemRequest {
  string id = 1;
}

message CategoryRequest {
  string category = 1 [(buf.validate.field).string = {min_len: 1}];
}

message ProductStockQuantity {
  string id = 1;
  int32 quantity = 2 [(buf.validate.field).cel = {
    id: "minimum_whole_sale_quantity",
    message: "quantity must be 0 or greater",
    // `this` refers to this field and the expression evaluates to a boolean result.
    // If the result is false, validation will fail with the above error message.
    expression: "this >= 0",
  }];
}

service ProductService {
  rpc List(google.protobuf.Empty) returns (ListProducts);
  rpc ListByCategory(CategoryRequest) returns (ListProducts);
  rpc IncreaseStock(ProductStockQuantity) returns (google.protobuf.Empty);
  rpc DecreaseStock(ProductStockQuantity) returns (google.protobuf.Empty);
  rpc ProductById(ItemRequest) returns (ProductResponse);
}

service AdminProductService {
  rpc Add(Product) returns (ProductResponse);
  rpc Delete(ItemRequest) returns (google.protobuf.Empty);
}
